--- a/.github/workflows/bindings.yml
+++ b/.github/workflows/bindings.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
-          version: v0.3.0
+          version: stable
 
       - name: Show Forge version
         run: forge --version
